// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout reducer should handle LAYOUT_COLLAPSE 1`] = `
Object {
  "isCollapsed": true,
  "isLoading": false,
  "items": Array [],
}
`;

exports[`Layout reducer should handle LAYOUT_EXPAND 1`] = `
Object {
  "isCollapsed": false,
  "isLoading": false,
  "items": Array [],
}
`;

exports[`Layout reducer should handle LAYOUT_HIDE_LOADING 1`] = `
Object {
  "isCollapsed": false,
  "isLoading": false,
  "items": Array [],
}
`;

exports[`Layout reducer should handle LAYOUT_INITIALIZE 1`] = `
Object {
  "currentLocation": "some location",
  "currentOrganization": "some organization",
  "isCollapsed": true,
  "isLoading": false,
  "items": "some-items",
}
`;

exports[`Layout reducer should handle LAYOUT_SHOW_LOADING 1`] = `
Object {
  "isCollapsed": false,
  "isLoading": true,
  "items": Array [],
}
`;

exports[`Layout reducer should return the initial state 1`] = `
Object {
  "isCollapsed": false,
  "isLoading": false,
  "items": Array [],
}
`;
